# sudp

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
authorizer/: README.md
authorizer/ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
authorizer/ts/src/: aad.ts  aead.ts  binding.ts  bytes.ts  canonical.ts  hash.ts  index.ts  kdf.ts  record.ts  webauthn.ts
authorizer/ts/test/: aead.test.ts  binding.test.ts  bytes.test.ts  canonical.test.ts  conformance.test.ts  kdf.test.ts  protocol_flow.test.ts
custodian/rust/: CHANGELOG.md  Cargo.toml  README.md
custodian/rust/examples/: end_to_end.rs
custodian/rust/src/: batch.rs  beta.rs  canonical.rs  custodian.rs  error.rs  freshness.rs  grant.rs  lib.rs  operation.rs  prelude.rs  xdevice.rs
custodian/rust/src/passkey/: mod.rs  webauthn.rs
custodian/rust/src/phases/: consumption.rs  grant.rs  mod.rs  setup.rs
custodian/rust/src/primitives/: aead.rs  auth.rs  domain.rs  hash.rs  kdf.rs  mod.rs  wrap.rs
custodian/rust/src/state/: mod.rs  protected.rs  record.rs
custodian/rust/tests/: e2e.rs  mock_authenticator.rs
examples/: end_to_end.rs
examples/protocol-demo/: README.md  run.sh
examples/protocol-demo/custodian/: Cargo.toml
examples/protocol-demo/custodian/src/: main.rs
examples/protocol-demo/runner/: package-lock.json  package.json  runner.ts  tsconfig.json
requester/ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
requester/ts/src/: build.ts  index.ts  types.ts  validate.ts
requester/ts/test/: build.test.ts  validate.test.ts
src/: batch.rs  beta.rs  canonical.rs  custodian.rs  error.rs  freshness.rs  grant.rs  lib.rs  operation.rs  prelude.rs  wire.rs  xdevice.rs
src/passkey/: webauthn.rs
src/phases/: consumption.rs  grant.rs  setup.rs
src/primitives/: aead.rs  auth.rs  csprng.rs  domain.rs  hash.rs  hpke_backend.rs  kdf.rs  kem.rs  mod.rs  wrap.rs
src/state/: mod.rs  protected.rs  registry.rs  sealed.rs
tests/: e2e.rs
