[package]
name = "sudp"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Secret-Use Delegation Protocol — protocol-level secret use for agentic systems"
license = "Apache-2.0"
repository = "https://github.com/xhyumiracle/sudp"
documentation = "https://docs.rs/sudp"
keywords = ["agent", "authorization", "passkey", "webauthn", "delegation"]
categories = ["cryptography", "authentication"]
readme = "README.md"

[features]
default = ["std-primitives", "webauthn", "json-canonical"]

# Standard primitive bundle: HKDF-SHA-256, XChaCha20-Poly1305 (AEAD + AEAD-as-wrap), OsRng.
std-primitives = [
    "dep:sha2",
    "dep:hkdf",
    "dep:chacha20poly1305",
    "dep:rand",
]

# WebAuthn realization of the Authenticator trait (ES256/P-256 + PRF extension).
webauthn = ["dep:p256", "dep:sha2"]

# JCS-style canonical JSON serialization for Operation/Grant hashing.
json-canonical = []

# HPKE-DHKEM backend for the Kem trait ( standard profile).
# Pulls the RustCrypto `hpke` crate and exposes `primitives::HpkeDhKem<...>`.
# `hpke` itself depends on `rand_core` 0.9 — we use its OsRng directly so we
# don't need to bridge rand 0.8 ↔ rand_core 0.9.
hpke = ["dep:hpke", "dep:rand_core_09"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
thiserror = "1"
base64 = "0.22"

# std-primitives
sha2 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }

# webauthn
p256 = { version = "0.13", optional = true, features = ["ecdsa"] }

# hpke
hpke = { version = "0.13", optional = true, default-features = false, features = ["alloc", "p256"] }
rand_core_09 = { package = "rand_core", version = "0.9", optional = true, default-features = false, features = ["os_rng"] }

[dev-dependencies]
serde_json = "1"
base64 = "0.22"
# For the xdevice e2e test we need p256's ECDH module; the main `webauthn`
# feature only pulls in the ECDSA bits.
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
