[package]
name = "sudp-demo-custodian"
version = "0.1.0"
edition = "2021"
publish = false
description = "Demo Custodian HTTP server for the SUDP protocol walkthrough."

[dependencies]
sudp = { path = "../../../custodian/rust" }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "sudp-demo-custodian"
path = "src/main.rs"
